some improvment , alltradehere

--- a/ArsaRExCH/Components/Layout/MainLayout.razor
+++ b/ArsaRExCH/Components/Layout/MainLayout.razor
@@ -70,7 +70,7 @@
             <a href="Bet1">Bet</a>
             <a href="AdminPanel">Admin Panel</a>
             <a href="AirDrop">AirDrop</a>
-            <a href="Forum">Forum</a>
+            <a href="BTCusdt">Trade</a>
             
             <!-- Tab 4 with hover effect to show more tabs -->
             <div class="tab-container">
@@ -78,7 +78,7 @@
                 <div class="sub-tabs">
                     <a href="BetHistory">Bet History</a>
                     <a href="BitcoinPoolOneUsers">Pools</a>
-                    <a href="#tab7">Tab 7</a>
+                    <a href="Forum">Forum</a>
                     <a href="#tab8">Tab 8</a>
                 </div>
             </div>
